--- a/index.html
+++ b/index.html
@@ -77,19 +77,6 @@
           <div>
             <div class="carousel-item active ">
 
-              <img class="myimage w-100" src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption">
-                <h1>learn with us</h1>
-                <p>Some representative placeholder content for the first slideIt will shape our youth in the best way to
-                  prepare them for the real world. In this course, we will cover the basics of coding and in what ways
-                  coding is used today..</p>
-                <input class="bg-primary rounded-3 text-white border-0" type="button" value=" Get Started">
-              </div>
-
-            </div>
-
-
-            <div class="carousel-item">
               <img class="myimage w-100" src="images/4k/n4.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption">
                 <h1>learn with us</h1>
@@ -98,9 +85,22 @@
                   coding is used today..</p>
                 <input class="bg-primary rounded-3 text-white border-0" type="button" value=" Get Started">
               </div>
+
+            </div>
+
+
+            <div class="carousel-item">
+              <img class="myimage w-100" src="images/4k/leon.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption">
+                <h1>learn with us</h1>
+                <p>Some representative placeholder content for the first slideIt will shape our youth in the best way to
+                  prepare them for the real world. In this course, we will cover the basics of coding and in what ways
+                  coding is used today..</p>
+                <input class="bg-primary rounded-3 text-white border-0" type="button" value=" Get Started">
+              </div>
             </div>
             <div class="carousel-item">
-              <img class="myimage w-100" src="images/4k/n3.jpg" class="d-block w-100" alt="...">
+              <img class="myimage w-100" src="images/4k/riad.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption">
                 <h1>learn with us</h1>
                 <p>Some representative placeholder content for the first slideIt will shape our youth in the best way to
