--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
   <script src="https://kit.fontawesome.com/e9dc625c7c.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="dark-img">
   <header>
+    <h1 class="animation"></h1>
     <!-- nav bar start  -->
     <div class="container mt-2">
-      <nav class="navbar navbar-expand-lg navbar navbar-dark  rounded-3 bg-primary">
+      <nav class="navbar navbar-expand-lg navbar navbar-dark  rounded-3 navbar-color ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">SerpaLerner</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -64,14 +65,13 @@
             </form>
           </div>
         </div>
-      </nav>
+      </nav><h1 class="animation"></h1>
     </div>
     <!-- nav bar end  -->
-
-
+    <h1 class="animation"></h1>
     <!-- carsual start  -->
 
-    <div class="container mt-4">
+    <div class="container mt-4 ">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div>
@@ -87,7 +87,7 @@
               </div>
 
             </div>
-
+            <h1 class="animation"></h1>
 
             <div class="carousel-item">
               <img class="myimage w-100" src="images/4k/n4.jpg" class="d-block w-100" alt="...">
@@ -125,8 +125,8 @@
           </div>
         </div>
         <!-- carsoul end  -->
-
-        <div class="d-flex justify-content-center text-justify text-center">
+        
+        <div class="d-flex justify-content-center text-justify text-center text-white">
           <div>
             <h1 class="mt-5 pt-5 gfont">Discover Our Popular <br>
               Courses</h1>
@@ -138,10 +138,10 @@
         </div>
 
         <!-- card start  -->
-
+           
         <!-- card 1  -->
         <div class="d-flex justify-content-between mb-3  ">
-
+            <h1 class="animation-card-o"></h1>
 
           <div class="card mb-3 left-box" style="max-width: 640px; ">
             <div class="row g-0">
@@ -159,7 +159,9 @@
               </div>
             </div>
           </div>
+          <h1 class="animationd"></h1>
           <!-- 1st box  -->
+          <h1 class="animation-card-o"></h1>
           <div class="card mb-3 right-box" style="max-width: 640px; ">
             <div class="row g-0">
               <div class="col-md-4">
@@ -204,6 +206,7 @@
             </div>
           </div>
           <!-- 1st box  -->
+          <h1 class="animation-card-o"></h1>
           <div class="card mb-3 right-box" style="max-width: 640px; ">
             <div class="row g-0">
               <div class="col-md-4">
@@ -250,6 +253,7 @@
             </div>
           </div>
           <!-- 1st box  -->
+          <h1 class="animation-card-o"></h1>
           <div class="card mb-3 right-box" style="max-width: 640px; ">
             <div class="row g-0">
               <div class="col-md-4">
@@ -298,6 +302,7 @@
             </div>
           </div>
           <!-- 1st box  -->
+          <h1 class="animation-card-o"></h1>
           <div class="card mb-3 right-box" style="max-width: 640px; ">
             <div class="row g-0">
               <div class="col-md-4">
@@ -482,7 +487,7 @@
   </div>
 
   <!-- modal  -->
-  <div class="container   d-flex justify-content-center mt-5 mb-5">
+  <div class="container   d-flex justify-content-center mt-5 mb-5 text-white">
     <div>
       <h1>Frequently Asked Questions</h1>
       <p>Keep reading for examples of questions and answers using the WH question words <br>
