--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header>
     <h1 class="animation"></h1>
     <!-- nav bar start  -->
-    <div class="container mt-2">
+    <div class="container mt-2 rounded-5">
       <nav class="navbar navbar-expand-lg navbar navbar-dark  rounded-3 navbar-color ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">SerpaLerner</a>
@@ -626,7 +626,7 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" role="button"><i
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/riadahmed009" role="button"><i
             class="fab fa-facebook-f"></i></a>
 
         <!-- Twitter -->
